# aygo-fuel-consumption

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
conf/: logging.yml
conf/base/: catalog.yml
data/01_raw/: fuel_consumption_20240907.csv
docs/source/: conf.py  index.rst
src/aygo_fuel_consumption/: __init__.py  __main__.py  hooks.py  settings.py
tests/: test_run.py
