[tool.poetry]
name = "aygo-fuel-consumption"
version = "0.1.0"
description = "Modelling fuel consumption by my Toyota Aygo."
authors = ["Kamil Zych"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
