[tool.poetry]
name = "aygo-fuel-consumption"
version = "0.1.0"
description = "Modelling fuel consumption by my Toyota Aygo."
authors = ["Kamil Zych"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
kedro = "^0.19.8"
kedro-datasets = ">=3.0"


[tool.poetry.group.dev.dependencies]
docutils = "<0.21"
sphinx = ">=5.3,<7.3"
sphinx-rtd-theme = "2.0.0"
nbsphinx = "0.8.1"
sphinx-autodoc-typehints = "1.20.2"
sphinx-copybutton = "0.5.2"
ipykernel = ">=5.3,<7.0"
jinja2 = "<3.2.0"
myst-parser = ">=1.0,<2.1"
kedro = {extras = ["jupyter"], version = "^0.19.8"}
notebook = "^7.2.2"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
ruff = "^0.6.4"
pre-commit = "^3.8.0"
interrogate = "^1.7.0"

[tool.kedro]
package_name = "aygo_fuel_consumption"
project_name = "aygo-fuel-consumption"
kedro_init_version = "0.19.8"
tools = ['Linting', 'Testing', 'Custom Logging', 'Documentation', 'Data Structure', 'PySpark', 'Kedro Viz']
example_pipeline = "False"
source_dir = "src"


[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/aygo_fuel_consumption -ra"""


[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]


[tool.ruff]
line-length = 120
show-fixes = true
include = ["pyproject.toml", "src/**/*.py", "scripts/**/*.py"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
ignore = ["E501"]  # Ruff format takes care of line-too-long
select = [
    "F",   # Pyflakes
    "W",   # pycodestyle
    "E",   # pycodestyle
    "I",   # isort
    "UP",  # pyupgrade
    "PL",  # Pylint
    "T201", # Print Statement
]


[tool.interrogate]
ignore-init-method = false
ignore-init-module = true
ignore-magic = true
ignore-semiprivate = false
ignore-private = true
ignore-property-decorators = false
ignore-module = true
ignore-nested-functions = true
ignore-nested-classes = false
ignore-setters = true
ignore-overloaded-functions = false
fail-under = 95
ext = []
style = "google"
verbose = 0
quiet = false
whitelist-regex = []
color = true
omit-covered-files = false
exclude = [
    # kedro-generated files
    "conf/",
    "docs/",
    "src/aygo_fuel_consumption/hooks.py",
    "src/aygo_fuel_consumption/__main__.py",
    "tests/test_run.py",
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
